--- a/Idle Timer/Base.lproj/Main.storyboard
+++ b/Idle Timer/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +11,59 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Idle_Timer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tree1" translatesAutoresizingMaskIntoConstraints="NO" id="Bi0-RP-4nz">
+                                <rect key="frame" x="137.66666666666666" y="356" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Bi0-RP-4nz" secondAttribute="height" multiplier="1:1" id="2me-oe-Dmw"/>
+                                    <constraint firstAttribute="width" constant="100" id="z7Y-2f-w0u"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aiW-Kd-tdR">
+                                <rect key="frame" x="0.0" y="678" width="375" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="kYA-oJ-aL3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <state key="normal" title="START">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="actionButtonHandler:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CEz-aH-Ctt"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" name="DefaultGreen"/>
+                        <constraints>
+                            <constraint firstItem="Bi0-RP-4nz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="1ly-AI-pNZ"/>
+                            <constraint firstItem="aiW-Kd-tdR" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="8nE-p2-dki"/>
+                            <constraint firstItem="Bi0-RP-4nz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FA9-Qj-D5S"/>
+                            <constraint firstItem="Bi0-RP-4nz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kut-j8-L2O"/>
+                            <constraint firstItem="Bi0-RP-4nz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Pbx-5v-iu0"/>
+                            <constraint firstItem="aiW-Kd-tdR" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="YTg-pb-ZXY"/>
+                            <constraint firstItem="aiW-Kd-tdR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qtA-lM-B3u"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="actionButton" destination="aiW-Kd-tdR" id="qq7-PP-TTy"/>
+                        <outlet property="mainTreeImageView" destination="Bi0-RP-4nz" id="KJ7-PL-IJS"/>
+                        <outlet property="widthConstraint" destination="z7Y-2f-w0u" id="j2f-ni-WSE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="137.4384236453202"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Tree1" width="500" height="961.5"/>
+        <namedColor name="DefaultGreen">
+            <color red="0.0" green="0.5607843137254902" blue="0.31764705882352939" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
